<resources>
    <!-- Toolbar -->
    <string name="app_name">StopWildDump</string>
    <string name="title_activity_info">InfoActivity</string>

    <!-- Common -->
    <string name="wild_dumps">Wild dumps</string>
    <string name="error_message">An error occurred, maybe there is no internet!</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>

    <!-- Home -->
    <string name="button_see_map">Check the map</string>
    <string name="signal_wild_dump">Signal wild dump</string>
    <string name="home_title">Because we don\'t want to see this anymore</string>
    <string name="option_menu">Option</string>

    <!--Map-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">@string/map_api_key</string>
    <string name="map_api_key" translatable="false">AIzaSyAXKsXiBk6eTGQ9AnQiLC5RDqbxdzMo-_o</string>
    <string name="standard">Standard</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>

    <!--List wild dump-->
    <string name="item_wild_dump_title">%1$d %2$s</string>

    <!-- Info -->
    <string name="information">Information</string>
    <string name="news">News</string>
    <string name="contributors">Contributors</string>
    <string name="profile">Profile</string>

    <!-- Detail -->
    <string name="type">Type: %1$s</string>
    <string name="zip">Zip: %1$s</string>
    <string name="city">City: %1$s</string>
    <string name="detail_latitude">Lat: %1$s</string>
    <string name="detail_longitude">Long: %1$s</string>
    <string name="detail_wild_dump_id">ID: %1$s</string>
    <string name="signal_date">Signal date: %1$s</string>
    <string name="clean_date">Clean date: %1$s</string>
    <string name="detail_description">Description:</string>
</resources>
