<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_corner"
        android:checkedButton="@id/standardType"
        android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/standardType"
            style="@style/ButtonMapTypeDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standard" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/terrainType"
            style="@style/ButtonMapTypeDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terrain" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hybridType"
            style="@style/ButtonMapTypeDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hybrid" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/satelliteType"
            style="@style/ButtonMapTypeDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/satellite" />
</LinearLayout>
